[#1] Remove psuedo classes from header. This fixes the hidden header issue on mobile devices.

--- a/css/zen.css
+++ b/css/zen.css
@@ -704,23 +704,6 @@ footer a.zen-github:hover::before, footer a.zen-github:focus::before {content: "
     vertical-align: middle;
     text-align: left;
   }
-
-  header::before, header::after {
-    display: block;
-    content: " ";
-    position: absolute;
-    z-index: 3;
-    top: 9px;
-    left: 0;
-    width: 100%;
-    height: 7px;
-    background: rgba(0, 39, 43, 0.2);
-  }
-  header::after {
-    top: 306px;
-    height: 4px;
-    background: rgba(0, 39, 43, 0.075);
-  }
   h1 {
     display: inline-block;
     position: relative;
